--- a/experimental/index.html
+++ b/experimental/index.html
@@ -389,7 +389,72 @@ footer {
         gap: 10px;
     }
 }
+@media (max-width: 768px) {
+    /* 1. Adjust the white corners for smaller screens */
+    body::after {
+        border-radius: 60px; /* Smaller radius for phones */
+        border-width: 30px; /* Thinner border so it doesn't block content */
+    }
 
+    /* 2. Adjust Navbar for mobile */
+    nav {
+        padding: 0 20px !important;
+        height: 80px !important;
+    }
+
+    .logo img {
+        height: 60px !important; /* Smaller logo on phones */
+    }
+
+    .menu {
+        gap: 15px !important;
+    }
+
+    .menu a {
+        font-size: 11px !important;
+    }
+
+    /* 3. Scale the Massive Hero Text */
+    .hero-line {
+        font-size: 22vw !important; /* Make it fill the width on portrait */
+        transform: scale(1.1, 1.0) !important; /* Reduce stretch for readability */
+    }
+
+    /* 4. Fix padding for content pages */
+    .container, .main, .content-body {
+        padding: 120px 20px 50px 20px !important;
+    }
+
+    h1 {
+        font-size: 18vw !important;
+    }
+    /* Make the Map words slightly smaller so they don't overlap too much */
+    canvas#mainCanvas {
+        height: 80vh; /* Shorter map area for better scrolling */
+    }
+
+    /* Adjust the Rotating Bezel for vertical screens */
+    .bezel-container {
+        left: -50vw; /* Center the wheel further left */
+        width: 100vw;
+        height: 100vw;
+    }
+
+    .bezel-content {
+        left: 45vw; /* Pull text in from the right */
+        max-width: 50vw;
+    }
+
+    .bezel-title {
+        font-size: 32px;
+    }
+
+    /* Stack the Footer links */
+    .footer-content {
+        grid-template-columns: 1fr !important;
+        gap: 30px;
+    }
+}
     </style>
 </head>
 <body>
