--- a/experimental/index.html
+++ b/experimental/index.html
@@ -379,54 +379,64 @@ footer {
 }
 
 /* Mobile Responsiveness for Footer */
+/* --- COMPREHENSIVE MOBILE OPTIMIZATION --- */
 @media (max-width: 768px) {
-    .footer-content {
-        grid-template-columns: 1fr; /* Stack vertically on mobile */
-        gap: 40px;
-    }
-    .footer-bottom {
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-@media (max-width: 768px) {
-    /* 1. Adjust the white corners for smaller screens */
-    body::after {
-        border-radius: 60px; /* Smaller radius for phones */
-        border-width: 30px; /* Thinner border so it doesn't block content */
+    /* 1. Prevent Hero Text from overflowing horizontally */
+    .hero-line {
+        font-size: 16vw !important; /* Smaller size to stay within edges */
+        transform: scale(1.0, 1.0) !important; /* Remove the extreme stretch for mobile */
+        line-height: 1.0 !important;
+        letter-spacing: -0.02em !important;
     }
 
-    /* 2. Adjust Navbar for mobile */
+    #hero-top { margin-right: 5vw !important; }
+    #hero-bot { margin-left: 5vw !important; }
+
+    /* 2. Fix the White Corners for small screens */
+    body::after {
+        border-radius: 60px !important;
+        border-width: 25px !important;
+        top: -20px;
+        left: -20px;
+        right: -20px;
+        bottom: -20px;
+    }
+
+    /* 3. Navbar Adjustments */
     nav {
         padding: 0 20px !important;
-        height: 80px !important;
+        height: 70px !important;
+    }
+    .logo img { height: 60px !important; }
+    .menu { gap: 15px !important; }
+    .menu a { font-size: 11px !important; }
+
+    /* 4. Fix Sticky Arc (Bezel) Layering & Positioning */
+    .bezel-container {
+        left: -65vh !important; /* Push the wheel further left */
+        top: 5vh !important;
     }
 
-    .logo img {
-        height: 60px !important; /* Smaller logo on phones */
+    .bezel-number {
+        font-size: 50px !important;
+        z-index: 1 !important; /* Keep numbers behind content */
     }
 
-    .menu {
-        gap: 15px !important;
+    .bezel-content {
+        left: 30vw !important; /* Pull content away from the wheel */
+        max-width: 65vw !important;
+        z-index: 10 !important; /* Force content above numbers */
+        background: rgba(255, 84, 41, 0.9); /* Semi-solid background for readability */
+        padding: 15px !important;
     }
 
-    .menu a {
-        font-size: 11px !important;
-    }
+    .bezel-title { font-size: 28px !important; }
 
-    /* 3. Scale the Massive Hero Text */
-    .hero-line {
-        font-size: 22vw !important; /* Make it fill the width on portrait */
-        transform: scale(1.1, 1.0) !important; /* Reduce stretch for readability */
-    }
-
-    /* 4. Fix padding for content pages */
-    .container, .main, .content-body {
-        padding: 120px 20px 50px 20px !important;
-    }
-
-    h1 {
-        font-size: 18vw !important;
+    /* 5. Footer Layout */
+    .footer-content {
+        grid-template-columns: 1fr !important;
+        gap: 40px !important;
+        padding-bottom: 40px !important;
     }
 }
 
