Update navbar and corners

--- a/experimental/index.html
+++ b/experimental/index.html
@@ -408,8 +408,8 @@ html::after {
     right: -50px;
     bottom: -50px;
     
-    border-radius: 20px; 
-    border: 60px solid rgba(255, 255, 255, 0.1);
+        border-radius: 60px; /* Smaller radius for phones */
+        border-width: 30px; /* Thinner border so it doesn't block content */
     filter: blur(30px);
     
     pointer-events: none; 
