--- a/experimental/index.html
+++ b/experimental/index.html
@@ -503,12 +503,9 @@ Visual systems that reshape themselves across platforms, audiences, and moments.
     <section class="grid-section">
         <div style="margin-bottom: 60px; font-size: 14px; color: #000000; text-transform: uppercase; letter-spacing: 1px;">Contributors</div>
         <div class="pill-container">
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Vladimir Tatlin</span></div>
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Kazimir Malevich</span></div>
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Alexander Bogdanov</span></div>
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Wassily Kandinsky</span></div>
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Ilya Chashnik</span></div>
-            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Moisey Feigin</span></div>
+            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Chris Schultze</span></div>
+            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Matthias Kubalek</span></div>
+            <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Meico Rerop</span></div>
 
         </div>
     </section>
