--- a/experimental/index.html
+++ b/experimental/index.html
@@ -470,8 +470,8 @@ html::after {
 <body>
 
 <nav>
-   <a href="index.html" class="logo">
-       <img src="./images/logo.png" alt="Knowledge Navigators">
+<a href="/" class="logo">
+           <img src="./images/logo.png" alt="Knowledge Navigators">
    </a>
    <div class="menu">
        <a href="projects.html">Projects</a>
