--- a/experimental/index.html
+++ b/experimental/index.html
@@ -581,7 +581,7 @@ Visual systems that reshape themselves across platforms, audiences, and moments.
     <section class="ring-scroll-track" id="ringTrack">
         <div class="ring-sticky-view">
             <div class="ring-center-content">
-                <div class="ring-title-main">arteficial artworks.</div>
+                <div class="ring-title-main">artificial artworks.</div>
                 <div class="ring-caption">More info</div>
             </div>
             <div class="ring-container" id="ringContainer"></div>
