--- a/experimental/index.html
+++ b/experimental/index.html
@@ -535,7 +535,7 @@ html::after {
    </a>
    <div class="menu">
        <a href="projects.html">Projects</a>
-       <a href="generic.html?title=Services">Services</a>
+       <a href="services.html">Services</a>
        <a href="generic.html?title=About">About</a>
        <a href="contact.html">Contact</a>
    </div>
