--- a/experimental/projects.html
+++ b/experimental/projects.html
@@ -106,7 +106,7 @@
         <a href="index.html" class="logo"><img src="./images/logo.png" alt="Logo"></a>
         <div class="menu">
             <a href="projects.html">Projects</a>
-            <a href="generic.html?title=Services">Services</a>
+            <a href="services.html">Services</a>
             <a href="generic.html?title=About">About</a>
             <a href="contact.html">Contact</a>
         </div>
