--- a/experimental/index.html
+++ b/experimental/index.html
@@ -536,7 +536,7 @@ html::after {
    <div class="menu">
        <a href="projects.html">Projects</a>
        <a href="services.html">Services</a>
-       <a href="generic.html?title=About">About</a>
+       <a href="about.html">About</a>
        <a href="contact.html">Contact</a>
    </div>
 </nav>
