--- a/experimental/about.html
+++ b/experimental/about.html
@@ -202,12 +202,12 @@
     </div>
 
     <div class="grid-box team-box">
-        <div class="team-img" style="background-image: url('./images/IMG_2220.JPG');"></div>
+        <div class="team-img" style="background-image: url('./images/matze.png');"></div>
         <div class="team-overlay"><div class="team-name">Matthias Kubalek</div><div class="team-role">HEAD OF TECHNOLOGY</div></div>
     </div>
 
      <div class="grid-box team-box">
-        <div class="team-img" style="background-image: url('./images/IMG_2221.JPG');"></div>
+        <div class="team-img" style="background-image: url('./images/meico.png');"></div>
         <div class="team-overlay"><div class="team-name">Meico Rerop</div><div class="team-role">CREATIVE DIRECTOR</div></div>
     </div>
 </div>
