--- a/experimental/index.html
+++ b/experimental/index.html
@@ -215,7 +215,7 @@ footer {
         INITIALIZE<br>CONTACT
         <span class="blinking-cursor">_</span>
     </div>
-    <a href="mailto:hello@knowledgenavigators.com" class="terminal-btn">[ EXECUTE MAILTO ]</a>
+    <a href="mailto:hello@knowledge-navigators.com" class="terminal-btn">[ EXECUTE MAILTO ]</a>
 </footer>
 
 <script>
