--- a/experimental/index.html
+++ b/experimental/index.html
@@ -202,10 +202,24 @@ footer {
 
 <section class="grid-section">
     <div style="margin-bottom: 60px; font-size: 14px; color: #000000; text-transform: uppercase; letter-spacing: 1px;">Contributors</div>
+    
     <div class="pill-container">
-        <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Chris Schultze</span></div>
-        <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Matthias Kubalek</span></div>
-        <div class="pill"><div class="pill-avatar"></div><span class="pill-name">Meico Rerop</span></div>
+        
+        <a href="about.html" class="pill" style="text-decoration: none;">
+            <div class="pill-avatar" style="background-image: url('./images/chris.png');"></div>
+            <span class="pill-name">Chris Schultze</span>
+        </a>
+
+        <a href="about.html" class="pill" style="text-decoration: none;">
+            <div class="pill-avatar" style="background-image: url('./images/matze.png');"></div>
+            <span class="pill-name">Matthias Kubalek</span>
+        </a>
+
+        <a href="about.html" class="pill" style="text-decoration: none;">
+            <div class="pill-avatar" style="background-image: url('./images/meico.png');"></div>
+            <span class="pill-name">Meico Rerop</span>
+        </a>
+
     </div>
 </section>
 
