--- a/experimental/about.html
+++ b/experimental/about.html
@@ -218,7 +218,7 @@
         INITIALIZE<br>CONTACT
         <span class="blinking-cursor">_</span>
     </div>
-    <a href="mailto:hello@knowledgenavigators.com" class="terminal-btn">[ EXECUTE MAILTO ]</a>
+    <a href="mailto:hello@knowledge-navigators.com" class="terminal-btn">[ EXECUTE MAILTO ]</a>
 </footer>
 
 <script>
