--- a/experimental/services.html
+++ b/experimental/services.html
@@ -167,7 +167,7 @@
             <span class="svc-desc">Campaign assets, lookbooks, and synthetic photography.</span>
         </a>
 
-        <a href="service-detail.html?type=visuals" class="service-row" data-img="./images/IMG_2220.JPG">
+        <a href="service-detail.html?type=visuals" class="service-row" data-img="./images/hero.mp4">
             <span class="svc-name">Motion & Video</span>
             <span class="svc-desc">Generative video and motion graphics.</span>
         </a>
@@ -176,12 +176,12 @@
     <div class="dir-category">
         <div class="cat-title">// 02_DIGITAL_INFRASTRUCTURE</div>
         
-        <a href="service-detail.html?type=web" class="service-row" data-img="./images/IMG_2221.JPG">
+        <a href="service-detail.html?type=web" class="service-row" data-img="./images/RS.png">
             <span class="svc-name">Website Building</span>
             <span class="svc-desc">High-performance, brutalist web architecture.</span>
         </a>
 
-        <a href="service-detail.html?type=web" class="service-row" data-img="./images/IMG_2222.JPG">
+        <a href="service-detail.html?type=web" class="service-row" data-img="./images/orange1.png">
             <span class="svc-name">3D Environments</span>
             <span class="svc-desc">WebGL experiences and immersive assets.</span>
         </a>
@@ -190,7 +190,7 @@
     <div class="dir-category">
         <div class="cat-title">// 03_SYSTEM_LOGIC</div>
         
-        <a href="service-detail.html?type=strategy" class="service-row" data-img="./images/IMG_2223.JPG">
+        <a href="service-detail.html?type=strategy" class="service-row" data-img="./images/orange1.png">
             <span class="svc-name">Brand Strategy</span>
             <span class="svc-desc">Positioning, voice, and market mapping.</span>
         </a>
