--- a/experimental/projects.html
+++ b/experimental/projects.html
@@ -166,7 +166,7 @@
             <div class="view-indicator">OPEN CASE STUDY -></div>
         </a>
 
-        <a href="https://www.christophmarlon.com/" class="project-row">
+        <a href="https://www.christophmarlon.com/page9.html" class="project-row">
             <div class="row-image" style="background-image: url('./images/CM.png');"></div>
             <div class="row-bar">
                 <span class="row-title">CHRISTOPH MARLON</span>
