--- a/experimental/services.html
+++ b/experimental/services.html
@@ -167,7 +167,7 @@
             <span class="svc-desc">Campaign assets, lookbooks, and synthetic photography.</span>
         </a>
 
-        <a href="service-detail.html?type=visuals" class="service-row" data-img="./images/video (1).mp4">
+        <a href="service-detail.html?type=visuals" class="service-row" data-img="./images/video.mp4">
             <span class="svc-name">Motion & Video</span>
             <span class="svc-desc">Generative video and motion graphics.</span>
         </a>
