--- a/experimental/contact.html
+++ b/experimental/contact.html
@@ -17,6 +17,9 @@
     <meta property="og:description" content="Ready to scale? Initiate transmission.">
     <meta property="og:image" content="./images/og-contact.jpg">
 
+        <link rel="icon" type="image/png" href="./images/logo.png">
+
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
