--- a/experimental/index.html
+++ b/experimental/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://knowledge-navigators.com/images/og-image.jpg">
     <meta property="twitter:card" content="summary_large_image">
 
-    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/logo.png">
 
     <script type="application/ld+json">
     {
