--- a/experimental/projects.html
+++ b/experimental/projects.html
@@ -17,6 +17,8 @@
     <meta property="og:description" content="Database Access Granted: Review our architectural work in AI and Web.">
     <meta property="og:image" content="./images/og-projects.jpg">
 
+        <link rel="icon" type="image/png" href="./images/logo.png">
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
