--- a/experimental/services.html
+++ b/experimental/services.html
@@ -17,6 +17,8 @@
     <meta property="og:description" content="Operational Capabilities: Visual Synthesis, Digital Infrastructure, and System Logic.">
     <meta property="og:image" content="./images/og-services.jpg">
 
+        <link rel="icon" type="image/png" href="./images/logo.png">
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
