--- a/experimental/about.html
+++ b/experimental/about.html
@@ -17,6 +17,8 @@
     <meta property="og:description" content="We navigate the gap between human intuition and algorithmic scale.">
     <meta property="og:image" content="./images/og-about.jpg">
 
+        <link rel="icon" type="image/png" href="./images/logo.png">
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
