--- a/experimental/projects.html
+++ b/experimental/projects.html
@@ -315,12 +315,12 @@
                 <span class="row-id">ID:001</span>
                 <div class="row-title-wrapper">
                     <span class="row-client">Rebecca Schultze</span>
-                    <span class="row-desc">High-fashion portfolio development with minimal footprint.</span>
+                    <span class="row-desc">Design portfolio development.</span>
                 </div>
                 <div class="row-tags">
                     <span class="tag">DEV</span>
                     <span class="tag">UX/UI</span>
-                    <span class="tag">BRANDING</span>
+                    <span class="tag">CONTENT</span>
                 </div>
                 <span class="row-icon">→</span>
             </div>
@@ -331,13 +331,12 @@
             <div class="row-grid">
                 <span class="row-id">ID:002</span>
                 <div class="row-title-wrapper">
-                    <span class="row-client">Owego Fintech</span>
-                    <span class="row-desc">AI-driven financial strategy and automated positioning.</span>
+                    <span class="row-client">Owego</span>
+                    <span class="row-desc">AI-driven branding and content strategy.</span>
                 </div>
                 <div class="row-tags">
                     <span class="tag">STRATEGY</span>
-                    <span class="tag">AI_MODELS</span>
-                    <span class="tag">WEB</span>
+                    <span class="tag">BRANDING</span>
                 </div>
                 <span class="row-icon">→</span>
             </div>
@@ -366,12 +365,10 @@
                 <span class="row-id">ID:004</span>
                 <div class="row-title-wrapper">
                     <span class="row-client">Werbemittelimport</span>
-                    <span class="row-desc">Large scale B2B ecommerce architecture.</span>
+                    <span class="row-desc">Large scale B2B Importeur Webdesign.</span>
                 </div>
                 <div class="row-tags">
-                    <span class="tag">ECOMMERCE</span>
-                    <span class="tag">AUTOMATION</span>
-                    <span class="tag">SCALING</span>
+                    <span class="tag">WEB</span>
                 </div>
                 <span class="row-icon">→</span>
             </div>
