--- a/experimental/index.html
+++ b/experimental/index.html
@@ -31,15 +31,6 @@ body {
 }
 * { box-sizing: border-box; }
 
-body::after {
-            content: ""; position: fixed;
-            top: -50px; left: -50px; right: -50px; bottom: -50px;
-            border-radius: 180px; 
-            border: 60px solid rgba(255, 255, 255, 0.25);
-            filter: blur(40px); pointer-events: none; z-index: 999999;
-            background: transparent;
-        }
-
 /* --- 2. NAVBAR --- */
 nav {
     position: fixed; top: 0; left: 0;
@@ -127,7 +118,7 @@ header.hero {
     margin-bottom: 5px;
 }
 
-/* --- 4. ACTION MARQUEE --- */
+/* --- 4. ACTION MARQUEE (FIXED) --- */
 .marquee-wrapper-outer {
     position: relative; width: 100%; padding: 80px 0;
     overflow: hidden; z-index: 50;
@@ -154,7 +145,9 @@ header.hero {
 
 .action-track {
     display: flex; white-space: nowrap;
-    animation: scrollAction 10s linear infinite;
+    /* Added will-change and ensured duration is correct */
+    animation: scrollAction 20s linear infinite;
+    will-change: transform;
     opacity: 1; transition: opacity 0.3s; align-items: center; height: 100%;
 }
 .action-marquee-link:hover .action-track { opacity: 0.1; }
@@ -188,6 +181,11 @@ header.hero {
     font-weight: 900; 
     text-transform: uppercase; 
     line-height: 0.9;
+}
+
+@keyframes scrollAction { 
+    0% { transform: translateX(0); } 
+    100% { transform: translateX(-50%); } 
 }
 
 /* --- 5. BREAKER SECTIONS --- */
@@ -418,6 +416,10 @@ footer { background: #000; color: var(--brand-orange); padding: 100px 50px 50px 
                 <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
                 <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
                 <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
+                <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
+                <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
+                <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
+                <span class="action-text">CUT THE BULLSH*T - LET'S SCALE // </span>
             </div>
             
             <div class="action-explainer">
@@ -631,7 +633,7 @@ const observer = new IntersectionObserver((entries) => {
 document.querySelectorAll('.reveal-up').forEach(el => observer.observe(el));
 
 
-// --- MAP LOGIC (DESKTOP ONLY) - FIXED COLLISION ---
+// --- MAP LOGIC (DESKTOP ONLY) ---
 if (window.innerWidth > 768) {
     const canvas = document.getElementById('mainCanvas');
     const ctx = canvas.getContext('2d');
